# mate-substreams

./: Cargo.toml  substreams.yaml
proto/: mate_data.proto
src/: lib.rs
src/pb/: acme.mate_data.v1.rs  mod.rs
